Bug fix in example files

--- a/examples/index.html
+++ b/examples/index.html
@@ -61,7 +61,7 @@
 
 			window.onload = function () {
 
-				Stapling.cacheable = true;
+				Stapling.cachable = true;
 
 				document.getElementById('xslt-json-handle').onclick = onXsltJsonHandleClick;
 				document.getElementById('json-only-handle').onclick = onJsonOnlyHandleClick;
