XHTML-friendly DOCTYPE, JSLint, remove redundant encoding (default is UTF-8)

--- a/examples/index.html
+++ b/examples/index.html
@@ -1,10 +1,12 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
 	<head>
 		<meta charset="UTF-8" />
 		<title>Examples using Stapling</title>
 
 		<script>
+/*global Stapling*/
+(function () {'use strict';
 
 			var datasource = {
 				"Dwarfs": [
@@ -94,6 +96,7 @@
 
 			};
 
+}());
 		</script>
 
 		<style>
